--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -21,25 +21,24 @@
     justify-content: center;
     align-items: center;
     margin: 0 auto 0 auto;
+    font-size:x-large;
 
 }
 
 
-.calculator-keys-row {
+.keys-row {
+    font-size:x-large;
+    padding-top: 10px;
     width: 50%;
     height: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    margin: 0 auto 0 auto;
+   
 }
 
-.calculator-keys-row:last-child {
-    margin-bottom: 0;
-}
 
-.calculator-keys {
+.tittle-keys {
     width: 100%;
     height: 50%;
     display: flex;
@@ -51,19 +50,26 @@
     padding: 10px;
     box-shadow: 0px 0px 10px #000000;
     z-index: 1;
+    font-size:x-large;
 }
 
 .button{
     width: 50vh;
-    height: 100%;
+    height: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #f5f5f5;
+    background-color: cornflowerblue;
     border-radius: 10px;
     padding: 10px;
+    outline: 0;
+    font-size:medium;
     /* box-shadow: 0px 0px 10px #000000; */
+}
+.button:hover{
+    cursor: pointer;
+    background-color: antiquewhite;
 }
 
 
