--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -31,12 +31,18 @@
     padding-top: 10px;
     width: 50%;
     height: 50%;
-    display: flex;
-    flex-direction: column;
+    /*display: flex;
+    flex-direction: column;*/
     justify-content: center;
    
 }
-
+.configureH {
+    color: #3c1b66;
+    font-weight: normal;
+    font-size: 35px;
+    font-family: Arial;
+    text-transform: uppercase;
+  }
 
 .tittle-keys {
     width: 100%;
