--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -13,7 +13,8 @@
 }
 
 .quiz-container {
-    background-color: grey;
+
+   
     width: 50rem;
     height: 60rem;
     display: flex;
@@ -21,10 +22,19 @@
     justify-content: center;
     align-items: center;
     margin: 0 auto 0 auto;
-    font-size:x-large;
+    font-size:30px;
+    color: #f5f5f5;
 
 }
-
+.body{
+    background-image: url("/img/fondoJs.PNG");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
+    min-height: 100vh;
+    margin: 0;
+}
 
 .keys-row {
     font-size:x-large;
@@ -46,15 +56,14 @@
 
 .tittle-keys {
     width: 100%;
-    height: 50%;
+    height: 30%;
     display: flex;
-    flex-direction: row;
+    font: oblique bold 120% cursive;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #f5f5f5;
-    border-radius: 10px;
+    background-color: #eec3ee;
     padding: 10px;
-    box-shadow: 0px 0px 10px #000000;
     z-index: 1;
     font-size:x-large;
 }
@@ -70,12 +79,15 @@
     border-radius: 10px;
     padding: 10px;
     outline: 0;
-    font-size:medium;
+    font-size: 20px;
+    color: #f5f5f5;
+    border-radius:   60px;
     /* box-shadow: 0px 0px 10px #000000; */
 }
 .button:hover{
-    cursor: pointer;
-    background-color: antiquewhite;
+    background: #a945c7;
+    box-shadow: 0 0 10px #a945c7, 0 0 40px #a945c7, 0 0 80px #a945c7;
+    
 }
 
 
